Fix spacing and duplicates

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ ul > li {
   background-color: #eee8d5;
 }
 
-#contents,#favs,#facts,#types {
+#contents, #favs, #facts, #types {
   color: #93a1a1;
 }
 
@@ -34,22 +34,17 @@ a:not(.no-highlight) {
   background-color: #719e07;
 }
 
-rel="external" {
+[rel="external"] {
   background-color: #2694d8;
 }
 
 ol > li {
   color: #719e47;
-}
-
-ol > li {
   color: #2aa198;
 }
 
 .types > li {
   background-color: #657ba3;
-}
-.types > li {
   background-color: #586e75;
 }
 
